WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170363
When destroying a Node, assert that it's been removed from all the touch handler maps
https://bugs.webkit.org/show_bug.cgi?id=170363
Summary
When destroying a Node, assert that it's been removed from all the touch hand...
Simon Fraser (smfr)
Reported
2017-03-31 14:50:41 PDT
When destroying a Node, assert tthat it's been removed from all the touch handler maps
Attachments
Patch
(1.59 KB, patch)
2017-03-31 14:51 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-03-31 14:51:35 PDT
Created
attachment 306013
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-03-31 17:11:35 PDT
https://trac.webkit.org/r214702
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug