When destroying a Node, assert that it's been removed from all the touch handler maps https://bugs.webkit.org/show_bug.cgi?id=170363 rdar://problem/31377469

Reviewed by Tim Horton.

Assert that the Node has been removed from the touch handler maps in all documents on destruction.

* dom/Document.h:
(WebCore::Document::hasTouchEventHandlers):
(WebCore::Document::touchEventTargetsContain):
* dom/Node.cpp:
(WebCore::Node::~Node):

Canonical link: https://commits.webkit.org/187284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214702 268f45cc-cd09-0410-ab3c-d52691b4dbfc